Fix bug with image sometimes being cut off

--- a/src/page/components/selected-image.module.css
+++ b/src/page/components/selected-image.module.css
@@ -4,12 +4,11 @@
 	z-index: 2;
 	width: 100vw;
 	height: 100vh;
-
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 	
 	backdrop-filter: blur(0.5em);
+
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 #selected-image-background.hidden {
 	visibility: hidden;
@@ -22,10 +21,11 @@
 	justify-content: center;
 	align-items: center;
 
-	flex-grow: 1;
 	box-sizing: border-box;
 	width: 100%;
+	min-height: 100%;
 	padding: 3%;
+	margin: 0;
 
 	transform: translateY(0);
 
